<resources>
    <string name="app_name">SeedClient</string>
    <string name="btn_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_pass">
        Forgot Password?
    </string>
    <string name="are_you_a_n">
        Are you a new User? Sign up
    </string>
    <string name="login">
        Login
    </string>
    <string name="tukexample_">
        tukexample@gmail.com
    </string>
    <string name="example123_">
        example123@
    </string>
    <string name="about_us">
        About us
    </string>
    <string name="contact_us">
        Contact Us
    </string>
    <string name="signup">
        SignUp
    </string>
    <string name="full_map">
FULL MAP
</string>
    <string name="can_i_charg">
Can I charge more than one device at the same time?
</string>
    <string name="q">
Q
</string>
    <string name="yes_you_can">
        Yes, you can book charging slots for more than one device.
    </string>
    <string name="a">
       a
    </string>
    <string name="can_i_charge">
        Can I charge more than one device at the same time?
    </string>
    <string name="faqs">
        FAQS
    </string>
    <string name="holding_other_views">holding other views</string>
    <string name="charging_tr">
        CHARGING TRANSACTIONS
    </string>
    <string name="brian234_sa">
        Brian234  |  Samsung Galaxy A10
    </string>
    <string name="charging_st">
        CHARGING STATUS
    </string>
    <string name="percent">
        28 %
    </string>
    <string name="remaining_t">
        REMAINING TIME
    </string>
    <string name="welcome_bac">
        Welcome Back
    </string>
    <string name="brian234">
        Brian234
    </string>
    <string name="amount">
        AMOUNT
    </string>
    <string name="hrs">
        03 : 34 : 45 HRS
    </string>
    <string name="ksh_110">
        KSH. 110
    </string>
    <string name="wallet">
        Wallet
    </string>
    <string name="order_pay"><![CDATA[
        Order & Pay
    ]]></string>
    <string name="send_reques"><![CDATA[
        Send & Request
    ]]></string>
    <string name="devices">
        Devices
    </string>
    <string name="recent_paym">
        RECENT PAYMENTS
    </string>
    <string name="sa">
        SA
    </string>
    <string name="s_e_e_d">
        S E E D
    </string>
    <string name="some_id_1">
        3880273
    </string>
    <string name="see_all_1">
        SEE ALL
    </string>
    <string name="see_all">
        SEE ALL
    </string>
    <string name="ksh_200_00">
        -KSH. 200.00
    </string>
    <string name="services">
        SERVICES
    </string>
    <string name="check_slot">
        Check slot
    </string>
    <string name="contact">
        Contact
    </string>
    <string name="book_slot">
        Book Slot
    </string>
    <string name="book_to_col">
        Book  to Collect Device
    </string>
    <string name="dec_03_20_p">
01 Dec, 03:20 PM
</string>
    <string name="some_id">
        3880273
    </string>
</resources>